--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #030303;
+    background-color: #4366ff;
   }
 }
